# rce-and-c2

dnscat2/client-combination/: README.md
dnscat2/go-client/: BUILD.md  EVASION.md  Flow.md  IMPL-PRIORITY.md  README.md  go.mod  go.sum
dnscat2/go-client/cmd/dnsapi-service/: config.go  log.go  log_stealth.go  main.go  service.go
dnscat2/go-client/cmd/dnscat/: getdns_windows.go  main.go
dnscat2/go-client/cmd/dnscat-dnsapi/: getdns_unix.go  main.go
dnscat2/go-client/cmd/dnscat-service/: config.go  main.go  service.go
dnscat2/go-client/pkg/controller/: controller.go
dnscat2/go-client/pkg/crypto/: encryptor.go
dnscat2/go-client/pkg/dlog/: log.go  log_stealth.go
dnscat2/go-client/pkg/driver/: console.go  driver.go  exec.go  ping.go
dnscat2/go-client/pkg/driver/command/: driver.go  packet.go
dnscat2/go-client/pkg/protocol/: packet.go
dnscat2/go-client/pkg/session/: session.go
dnscat2/go-client/pkg/tunnel/dns/: dns.go  protocol.go
dnscat2/go-client/pkg/tunnel/dnsapi/: dnsapi.go  stub.go
dnscat2/ps1-client/: dnscat2.ps1
react2shell-tool/: .gitignore  Flow.md  README.md  compress_payload.py  encrypt_payload_xor.py
react2shell-tool/exploit_tool/: payload_generator.py  shell.py
react2shell-tool/exploit_tool/commands/: __init__.py  builtin.py  file_ops.py  recon.py
toneshell/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
toneshell/src/: CMakeLists.txt  README.md
toneshell/src/common/: README.md  api_helper.hpp  api_helper_test.cpp  checks.cpp  checks.hpp  checks_test.cpp  embed_payload.ps1  embedded.hpp.in  fnv1a.hpp  handler.cpp  handler.hpp  handler_util.cpp  handler_util.hpp  handler_util_test.cpp  logger.cpp  logger.hpp  logger_test.cpp  obfuscation.hpp  obfuscation_test.cpp  pi_aes_ctr.cpp  pi_aes_ctr.hpp  pi_aes_ctr_test.cpp  pi_base64.cpp  pi_base64.hpp  pi_base64_test.cpp  register.cpp  register.hpp  shared_func.hpp  sign_artifact.ps1  util.cpp  util.hpp  win_helper.h  xor.cpp  xor.hpp  xor_test.cpp
toneshell/src/shellcode/: CMakeLists.txt  README.md  comms.cpp  comms.hpp  comms_encryption.hpp  comms_encryption_det.cpp  comms_encryption_test4.cpp  comms_test.cpp  entry.cpp  exec.cpp  exec.hpp  exec_test.cpp  rc4.cpp  rc4.hpp  rc4_test.cpp  shellcode.hpp  shellcode_util.cpp  shellcode_util.hpp  shellcode_util_id_d.cpp  shellcode_util_id_p.cpp  shellcode_util_test.cpp  test4shellcode.hpp
toneshell/src/test4/: .gitignore  CMakeLists.txt  README.md  create_test4_zip.ps1
toneshell/src/test4/dropper/: CMakeLists.txt  README.md  dropper.cpp  dropper_util.cpp  dropper_util.hpp  dropper_util_test.cpp
toneshell/src/test4/gflagsui/: CMakeLists.txt  README.md  dllmain.cpp  embeds.hpp  gflagsui.def  gflagsui_util.cpp  gflagsui_util.hpp  gflagsui_util_test.cpp
toneshell/src/wsdapi/: .gitignore  CMakeLists.txt  Essos Competitiveness Brief.lnk  README.md  dllmain.cpp  embeds.hpp  wsdapi.def
toneshell/tests/: README.md  test_util.cpp  test_util.hpp
toneshell/tests/gtest/: CMakeLists.txt  README.md
webshell/: antak_obfus.aspx
